--- a/resources/web/css/app.css
+++ b/resources/web/css/app.css
@@ -4,9 +4,7 @@
 
 /* Components */
 @import "tailwindcss/components";
-@import "button";
-/* @import "form"; */
-/* @import "nprogress"; */
+@import "buttons";
 
 /* Utilities */
 @import "tailwindcss/utilities";
